chore(seo): fixing canonical and adding googleanalytics

--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,7 @@ buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-# googleAnalytics: UA-123-45
+googleAnalytics: G-0XQKYH4KYS
 
 minify:
     disableXML: true
