chore(seo): adding lazyloading and minify

--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ googleAnalytics: G-0XQKYH4KYS
 
 minify:
     disableXML: true
-    # minifyOutput: true
+    minifyOutput: true
 
 # UBAH URUTAN languages: id DULU
 languages:
@@ -73,6 +73,7 @@ params:
     env: production # to enable google analytics, opengraph, twitter-cards and schema.
     description: "Blog kisah hidup dan percintaan Jovita & Dhimas. Cerita, perjalanan, dan inspirasi cinta."
     author: ["Jovita", "Dhimas"]
+    lazyLoadImages: true
 
     defaultTheme: auto
     # disableThemeToggle: true
