--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,60 +1,88 @@
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
-#local_backend: true #set this to true if you want to enable local development mode for Netlify CMS. You must have node installed. Start Netlify CMS proxy server with 'npx netlify-cms-proxy-server'. More info on usage here: https://www.netlifycms.org/docs/beta-features/
-# This line should *not* be indented
-publish_mode: editorial_workflow
+  branch: main # Pastikan ini sesuai dengan branch utama repo Anda
 
-# These lines should *not* be indented
-media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+# Pengaturan Media
+media_folder: "static/images/uploads"
+public_folder: "/images/uploads"
+
+# Workflow
+publish_mode: editorial_workflow
 
 collections:
   - name: "posts"
     label: "Posts"
+    label_singular: "Post" # Menampilkan "New Post" bukan "New Posts"
     folder: "content/posts"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    # Optimasi Tampilan List di Dashboard CMS:
+    summary: "{{title}} — {{year}}/{{month}}/{{day}} ({{author}})"
+    sortable_fields: ["date", "title", "author"]
+    view_groups:
+      - label: Year
+        field: date
+        pattern: \d{4}
+      - label: Author
+        field: author
+        
     fields:
+      # --- Content Utama ---
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "date" }
-      - { label: "Author", name: "author", widget: "select", options: ["Jovita", "Dhimas", "Jovita & Dhimas"], required: true }
-      - { label: "Tags", name: "tags", widget: "list" }
-      - { label: "Categories", name: "categories", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Description", name: "description", widget: "string", required: false}
-      - { label: "Weight", name: "weight", widget: "number", required: false, default: 0, value_type: "int", min: 0} 
+      - { label: "Date", name: "date", widget: "datetime", format: "YYYY-MM-DDTHH:mm:ssZ", date_format: "YYYY-MM-DD", time_format: "HH:mm" }
+      - { label: "Author", name: "author", widget: "select", options: ["Jovita", "Dhimas", "Jovita & Dhimas"], default: "Dhimas", required: true }
+      
+      # --- Taksonomi (Diubah ke list agar support banyak tags/kategori) ---
+      - { label: "Tags", name: "tags", widget: "list", required: false }
+      - { label: "Categories", name: "categories", widget: "list", required: false }
+      
+      - { label: "Description", name: "description", widget: "string", required: false, hint: "Ringkasan pendek untuk SEO/Social Media" }
+      - { label: "Weight", name: "weight", widget: "number", required: false, default: 0, value_type: "int", min: 0 }
+      
+      # --- Cover Image ---
       - name: cover
         label: Cover Image
         widget: object
         required: false
+        collapsed: true
         fields:
-          - {name: image, label: Image, widget: image, required: false}
-          - {name: alt, label: Alt text, widget: string, required: false}
-          - {name: caption, label: Caption, widget: string, required: false}
-          - {label: "Hidden", name: "hidden", widget: "boolean", default: false, required: false}
-          - {label: "Relative", name: "relative", widget: "boolean", default: false, required: false}
+          - { name: image, label: Image, widget: image, required: false }
+          - { name: alt, label: Alt text, widget: string, required: false }
+          - { name: caption, label: Caption, widget: string, required: false }
+          - { label: "Hidden", name: "hidden", widget: "boolean", default: false, required: false }
+          - { label: "Relative", name: "relative", widget: "boolean", default: false, required: false }
+
+      # --- Body Content ---
+      - { label: "Body", name: "body", widget: "markdown" }
+
+      # --- Theme Settings (PaperMod Configuration) ---
+      # Catatan: Setting ini dibiarkan flat (tidak di dalam object) agar terbaca langsung di Frontmatter Hugo
+      
+      # Tampilan (Display)
+      - { label: "Show TOC", name: "showToc", widget: "boolean", default: true, required: false }
+      - { label: "TOC Open", name: "TocOpen", widget: "boolean", default: false, required: false }
+      - { label: "Show BreadCrumbs", name: "ShowBreadCrumbs", widget: "boolean", default: true, required: false }
+      - { label: "Show Reading Time", name: "ShowReadingTime", widget: "boolean", default: true, required: false }
+      - { label: "Show Word Count", name: "ShowWordCount", widget: "boolean", default: false, required: false }
+      - { label: "Show Post Nav Links", name: "ShowPostNavLinks", widget: "boolean", default: true, required: false }
+      
+      # Fitur (Features)
+      - { label: "Enable Comments", name: "comments", widget: "boolean", default: true, required: false }
+      - { label: "Disable Share Buttons", name: "disableShare", widget: "boolean", default: false, required: false }
+      - { label: "Disable Highlight.JS", name: "disableHLJS", widget: "boolean", default: false, required: false }
+      - { label: "Search Hidden", name: "searchHidden", widget: "boolean", default: false, required: false }
+      - { label: "Hide Metadata", name: "hidemeta", widget: "boolean", default: false, required: false }
+      - { label: "Hide Summary", name: "hideSummary", widget: "boolean", default: false, required: false }
+      - { label: "Show RSS Button", name: "ShowRssButtonInSectionTermList", widget: "boolean", default: false, required: false }
+      - { label: "Use Hugo TOC", name: "UseHugoToc", widget: "boolean", default: false, required: false }
+
+      # --- Advanced Edit ---
       - name: editPost
-        label: Suggest Changes to Post Info
+        label: "Suggest Changes Info (Advanced)"
         widget: object
         required: false
         collapsed: true
         fields:
-          - {name: URL, label: URL, widget: string , default: "", required: false}
-          - {name: Text, label: Text, widget: string, default: "", required: false}
-          - {name: appendFilePath, label: "Append File Path", widget: boolean, default: false, required: false}
-      - { label: "Show TOC", name: "showToc", widget: "boolean", default: false, required: false}
-      - { label: "TOC Open", name: "TocOpen", widget: "boolean", default: false, required: false}
-      - { label: "Hide Metadata", name: "hidemeta", widget: "boolean", default: false, required: false}
-      - { label: "Enable Comments", name: "comments", widget: "boolean", default: true, required: false}
-      - { label: "Disable Highlight.JS", name: "disableHLJS", widget: "boolean", default: false, required: false}
-      - { label: "Disable Share", name: "disableShare", widget: "boolean", default: false, required: false}
-      - { label: "Hide Summary", name: "hideSummary", widget: "boolean", default: false, required: false}
-      - { label: "searchHidden", name: "searchHidden", widget: "boolean", default: false, required: false}
-      - { label: "ShowReadingTime", name: "ShowReadingTime", widget: "boolean", default: false, required: false}
-      - { label: "ShowBreadCrumbs", name: "ShowBreadCrumbs", widget: "boolean", default: false, required: false}
-      - { label: "ShowPostNavLinks", name: "ShowPostNavLinks", widget: "boolean", default: false, required: false}
-      - { label: "ShowWordCount", name: "ShowWordCount", widget: "boolean", default: false, required: false}
-      - { label: "ShowRssButtonInSectionTermList", name: "ShowRssButtonInSectionTermList", widget: "boolean", default: false, required: false}
-      - { label: "UseHugoToc", name: "UseHugoToc", widget: "boolean", default: false, required: false}
-
+          - { name: URL, label: URL, widget: string, default: "", required: false }
+          - { name: Text, label: Text, widget: string, default: "", required: false }
+          - { name: appendFilePath, label: "Append File Path", widget: boolean, default: false, required: false }
